--- a/index.html
+++ b/index.html
@@ -1042,8 +1042,8 @@
 
   
   <section class="tiers-section" id="tiers">
-  <p class="subtitle">- Select your commemorative tier package - <br>All tiers come with a food and drink ticket (as seen in rock tier) which will provide you <br>with 
-    dinner and one free drink at the cocktail reception on Saturday.</p>
+  <p class="subtitle">- Select your commemorative tier package - <br>Each tier includes a contribution to the Chapter, exclusive commemorative merchandise, and a food & drink
+    ticket for Saturday's dinner and cocktail reception</p>
   <p class="subtitle"><i>*Designs are not final and subject to slight modifications*</i></p>
   <div class="tiers">
     <div class="tier" data-aos="fade-up" data-aos-delay="300">
@@ -1123,3 +1123,4 @@
 
 </body>
 </html>
+
