--- a/index.html
+++ b/index.html
@@ -1042,7 +1042,7 @@
 
   
   <section class="tiers-section" id="tiers">
-  <p class="subtitle">- Select your commemorative tier package - <br>Each tier includes a contribution to the Chapter, exclusive commemorative merchandise, and a food & drink
+  <p class="subtitle">- Select your commemorative tier package - <br>Each tier includes a contribution to the Chapter, exclusive commemorative merchandise, <br>and a food & drink
     ticket for Saturday's dinner and cocktail reception</p>
   <p class="subtitle"><i>*Designs are not final and subject to slight modifications*</i></p>
   <div class="tiers">
@@ -1123,4 +1123,5 @@
 
 </body>
 </html>
+
 
