--- a/index.html
+++ b/index.html
@@ -1038,9 +1038,47 @@
 
 </section>
 
+<section class="tiers-section" id="tiers">
+  <p class="subtitle">- Reserve Your Anniversary Package -<br>
+    Each package includes a commemorative polo, wristband, and a ticket to Saturday’s reception.</p>
+  <div class="tiers">
+    <div class="tier" style="width:100%;" data-aos="fade-up" data-aos-delay="300">
+      <img src="tier-rock.png" alt="Anniversary Package" />
+      <h2>$150 Anniversary Package</h2>
+      <ul>
+        <li>Commemorative Polo</li>
+        <li>Anniversary Wristband</li>
+        <li>Reception Ticket</li>
+      </ul>
+      <div class="price">$150</div>
+      <a class="button" href="https://buy.stripe.com/eVq7sK5ij4I4dEa9M4cZa07">Purchase/RSVP</a>
+    </div>
+  </div>
+
+  <p class="subtitle" style="margin-top:2rem;">- Support the Chapter with a Donation -</p>
+  <div class="tiers">
+    <div class="tier" data-aos="fade-up" data-aos-delay="300">
+      <h2>Supporter</h2>
+      <div class="price">$150</div>
+      <a class="button" href="#">Donate</a>
+    </div>
+
+    <div class="tier" data-aos="fade-up" data-aos-delay="500">
+      <h2>Patron</h2>
+      <div class="price">$300</div>
+      <a class="button" href="#">Donate</a>
+    </div>
+
+    <div class="tier" data-aos="fade-up" data-aos-delay="800">
+      <h2>Benefactor</h2>
+      <div class="price">$500</div>
+      <a class="button" href="#">Donate</a>
+    </div>
+  </div>
+</section>
 
 
-  
+<!--  
   <section class="tiers-section" id="tiers">
   <p class="subtitle">- Select your commemorative tier package - <br>Each tier includes a contribution to the Chapter, exclusive commemorative merchandise, <br>and a food & drink
     ticket for Saturday's dinner and cocktail reception</p>
@@ -1064,6 +1102,7 @@
       <a class="button" href="https://buy.stripe.com/fZu8wOaCD6QccA69M4cZa00">Purchase/RSVP</a>
     </div>
   </section>
+  -->
 
   <footer>
     © 2025 Kappa Rho Legacy Foundation. All rights reserved.
@@ -1123,5 +1162,6 @@
 
 </body>
 </html>
+
 
 
