--- a/index.html
+++ b/index.html
@@ -868,7 +868,7 @@
       📅 October 17–19, 2025<br>
       📍 UC San Diego<br>
     </p>
-    <a href="#tiers" class="hero-cta-button">Reserve Your Spot</a>
+    <a href="https://buy.stripe.com/6oUcN49yzfmIbw24rKcZa0a" class="hero-cta-button">Purchase Your Ticket</a>
   </div>
 </section>
 
@@ -1080,7 +1080,7 @@
   -->
 
 
-
+<!--
   <section class="tiers-section" id="tiers">
   <p class="subtitle">- Select your commemorative tier package - <br>Each tier includes a contribution to the Chapter, exclusive commemorative merchandise, <br>and a food & drink
     ticket for Saturday's dinner and cocktail reception</p>
@@ -1104,7 +1104,7 @@
       <a class="button" href="https://buy.stripe.com/fZu8wOaCD6QccA69M4cZa00">Purchase/RSVP</a>
     </div>
   </section>
-  
+  -->
 
   <footer>
     © 2025 Kappa Rho Legacy Foundation. All rights reserved.
@@ -1164,6 +1164,7 @@
 
 </body>
 </html>
+
 
 
 
