--- a/legacy.html
+++ b/legacy.html
@@ -105,6 +105,59 @@
     <p class="subtitle">Honoring the past. Investing in the future.</p>
   </header>
 
+    <main>
+    <p>
+      Welcome to the official page of the <strong>Kappa Rho Legacy Foundation</strong>, our scholarship and leadership initiative built to support future generations of Sigma Nu brothers at UC San Diego.
+    </p>
+    <p>
+      This page is under development. More information on scholarships, board members, and giving opportunities will be available soon.
+    </p>
+  </main>
+
+  <section style="text-align:center; padding:3rem 1rem; background-color:#111;">
+  <h2 style="font-family:'DM Serif Display',serif; color:#fff; margin-bottom:1rem;">
+    Our Mission
+  </h2>
+  <p style="max-width:700px; margin:auto; color:#ccc; line-height:1.7;">
+    The Kappa Rho Legacy Foundation provides scholarships, leadership development, and educational
+    support for the undergraduate members of Sigma Nu Kappa Rho at UC San Diego.
+  </p>
+</section>
+
+
+  <section style="text-align:center; padding:4rem 1rem; background-color:#000;">
+  <h2 style="font-family:'DM Serif Display',serif; color:#fff; margin-bottom:1rem;">
+    Support the Legacy
+  </h2>
+  <p style="color:#ccc;">Choose a giving option that fits you best.</p>
+
+  <!-- One-time -->
+  <div style="margin:2rem 0;">
+    <h3 style="color:#eee;">One-Time Donation</h3>
+    <a href="https://buy.stripe.com/example-once" style="margin:0.5rem; padding:0.8rem 1.5rem; border:1px solid #fff; border-radius:6px; color:#fff; text-decoration:none; display:inline-block;">Give $100</a>
+    <a href="https://buy.stripe.com/example-once" style="margin:0.5rem; padding:0.8rem 1.5rem; border:1px solid #fff; border-radius:6px; color:#fff; text-decoration:none; display:inline-block;">Give $250</a>
+    <a href="https://buy.stripe.com/example-once" style="margin:0.5rem; padding:0.8rem 1.5rem; border:1px solid #fff; border-radius:6px; color:#fff; text-decoration:none; display:inline-block;">Custom Amount</a>
+  </div>
+
+  <!-- Monthly -->
+  <div style="margin:2rem 0;">
+    <h3 style="color:#eee;">Monthly Giving – <em>Legacy Circle</em></h3>
+    <a href="https://buy.stripe.com/example-monthly" style="margin:0.5rem; padding:0.8rem 1.5rem; border:1px solid #fff; border-radius:6px; color:#fff; text-decoration:none; display:inline-block;">$25/month</a>
+    <a href="https://buy.stripe.com/example-monthly" style="margin:0.5rem; padding:0.8rem 1.5rem; border:1px solid #fff; border-radius:6px; color:#fff; text-decoration:none; display:inline-block;">$50/month</a>
+    <a href="https://buy.stripe.com/example-monthly" style="margin:0.5rem; padding:0.8rem 1.5rem; border:1px solid #fff; border-radius:6px; color:#fff; text-decoration:none; display:inline-block;">Custom</a>
+  </div>
+</section>
+
+
+  <footer style="background-color:#111; color:#888; font-size:0.9rem; text-align:center; padding:2rem 1rem; line-height:1.6;">
+  <p>The Kappa Rho Legacy Foundation is a 501(c)(3) nonprofit organization.<br>
+  EIN XX-XXXXXXX. Donations are tax-deductible to the fullest extent allowed by law.<br>
+  No goods or services were provided in exchange for this contribution.</p>
+  <p>Contact: <a href="mailto:foundation@sigmanukapparho.org" style="color:#bbb;">foundation@sigmanukapparho.org</a></p>
+  <p>© 2025 Kappa Rho Legacy Foundation</p>
+</footer>
+
+
   <main>
     <p>
       Welcome to the official page of the <strong>Kappa Rho Legacy Foundation</strong>, our scholarship and leadership initiative built to support future generations of Sigma Nu brothers at UC San Diego.
