--- a/legacy.html
+++ b/legacy.html
@@ -151,21 +151,14 @@
 
   <footer style="background-color:#111; color:#888; font-size:0.9rem; text-align:center; padding:2rem 1rem; line-height:1.6;">
   <p>The Kappa Rho Legacy Foundation is a 501(c)(3) nonprofit organization.<br>
-  EIN XX-XXXXXXX. Donations are tax-deductible to the fullest extent allowed by law.<br>
+  EIN 39-2882713. Donations are tax-deductible to the fullest extent allowed by law.<br>
   No goods or services were provided in exchange for this contribution.</p>
-  <p>Contact: <a href="mailto:foundation@sigmanukapparho.org" style="color:#bbb;">foundation@sigmanukapparho.org</a></p>
+  <p>Contact: <a href="mailto:foundation@sigmanukapparho.org" style="color:#bbb;">alumni@sigmanukapparho.org</a></p>
   <p>© 2025 Kappa Rho Legacy Foundation</p>
 </footer>
 
 
-  <main>
-    <p>
-      Welcome to the official page of the <strong>Kappa Rho Legacy Foundation</strong>, our scholarship and leadership initiative built to support future generations of Sigma Nu brothers at UC San Diego.
-    </p>
-    <p>
-      This page is under development. More information on scholarships, board members, and giving opportunities will be available soon.
-    </p>
-  </main>
+ 
 
   <footer>
     © 2025 Kappa Rho Legacy Foundation. All rights reserved.
