--- a/legacy.html
+++ b/legacy.html
@@ -146,9 +146,7 @@
     <p>
       Welcome to the official page of the <strong>Kappa Rho Legacy Foundation</strong>, our scholarship and leadership initiative built to support future generations of Sigma Nu brothers at UC San Diego.
     </p>
-    <p>
-      This page is under development. More information on scholarships, board members, and giving opportunities will be available soon.
-    </p>
+    
   </main>
 
   <section style="text-align:center; padding:3rem 1rem; background-color:#111;">
@@ -162,6 +160,41 @@
 </section>
 
  
+<section id="about-501c3" class="section-wrap" style="background:#0b0b0b;">
+  <h2 class="section-title">Our 501(c)(3) Status</h2>
+  <p class="section-sub" style="max-width:850px;">
+    The <strong>Kappa Rho Legacy Foundation</strong> is an officially recognized
+    <strong>501(c)(3) public charity</strong> under the Internal Revenue Code.
+    Our mission is to provide scholarships, leadership development, and educational support
+    for the undergraduate members of <em>Sigma Nu – Kappa Rho Chapter</em> at UC San Diego.
+  </p>
+
+  <div style="max-width:800px; margin:2rem auto; color:#ccc; line-height:1.7;">
+    <p>
+      As a federally tax-exempt nonprofit organization, all contributions made to the Foundation
+      are <strong>tax-deductible</strong> to the fullest extent allowed by law.
+      Donors receive an official receipt acknowledging their gift for personal or corporate records.
+    </p>
+
+    <p>
+      The Foundation operates independently of the undergraduate chapter and is governed by a
+      volunteer <strong>Board of Directors</strong> composed of alumni who oversee all scholarships,
+      grants, and leadership initiatives. All funds are used exclusively for educational and
+      charitable purposes in accordance with our charter and IRS regulations.
+    </p>
+
+    <p>
+      <strong>EIN:</strong> 39-2882713<br />
+      <strong>IRS Determination Letter:</strong> Approved under section 501(c)(3) of the Internal Revenue Code.
+    </p>
+
+    <p style="margin-top:1.5rem;">
+      For verification, you may look up our exemption record in the IRS Tax Exempt Organization Search database
+      or request a copy of our determination letter by emailing
+      <a href="mailto:foundation@sigmanukapparho.org" style="color:#bbb;">foundation@sigmanukapparho.org</a>.
+    </p>
+  </div>
+</section>
 
 
   <section id="donate" class="section-wrap">
