--- a/legacy.html
+++ b/legacy.html
@@ -160,13 +160,44 @@
 </section>
 
  
+
+
+  <section id="donate" class="section-wrap">
+  <h2 class="section-title">Support the Legacy</h2>
+  <p class="section-sub">Choose a one-time gift or join the monthly <em>Legacy Circle</em>. Every contribution funds scholarships and leadership development for Kappa Rho undergraduates.</p>
+
+  <!-- One-time -->
+  <div style="text-align:center;">
+    <h3 style="color:#eee; margin-bottom:0.5rem;">One-Time Donation</h3>
+    <div class="action-row">
+      <a class="cta-btn" href="https://buy.stripe.com/6oU28q9jmedT0m87zVdAk02"   aria-label="Donate $50 one time">$50</a>
+      <a class="cta-btn" href="https://buy.stripe.com/14A00ieDG8Tz3yk5rNdAk03"  aria-label="Donate $100 one time">$100</a>
+      <a class="cta-btn" href="https://buy.stripe.com/6oUfZg1QU9XD0m85rNdAk04"  aria-label="Donate $250 one time">$250</a>
+      <a class="cta-btn" href="https://buy.stripe.com/7sY4gycvy7Pvb0M07tdAk01" aria-label="Donate a custom amount one time">Custom Amount</a>
+    </div>
+  </div>
+
+  <hr class="hr-soft">
+
+  <!-- Monthly (recurring) -->
+  <div style="text-align:center;">
+    <h3 style="color:#eee; margin-bottom:0.5rem;">Monthly Giving — <em>Legacy Circle</em></h3>
+    <div class="action-row">
+      <a class="cta-btn" href="https://buy.stripe.com/aFa9AS9jm1r7c4Q9I3dAk05"  aria-label="Donate $10 monthly">$10/mo</a>
+      <a class="cta-btn" href="https://buy.stripe.com/aFa3cu7begm11qc6vRdAk06"  aria-label="Donate $25 monthly">$25/mo</a>
+      <a class="cta-btn" href="https://buy.stripe.com/6oU5kC2UY4Dj1qcdYjdAk07"  aria-label="Donate $50 monthly">$50/mo</a>
+      <a class="cta-btn" href="https://buy.stripe.com/month-custom" aria-label="Donate a custom amount monthly">Custom Monthly</a>
+    </div>
+  </div>
+</section>
+
+
+  
 <section id="about-501c3" class="section-wrap" style="background:#0b0b0b;">
   <h2 class="section-title">Our 501(c)(3) Status</h2>
   <p class="section-sub" style="max-width:850px;">
     The <strong>Kappa Rho Legacy Foundation</strong> is an officially recognized
     <strong>501(c)(3) public charity</strong> under the Internal Revenue Code.
-    Our mission is to provide scholarships, leadership development, and educational support
-    for the undergraduate members of <em>Sigma Nu – Kappa Rho Chapter</em> at UC San Diego.
   </p>
 
   <div style="max-width:800px; margin:2rem auto; color:#ccc; line-height:1.7;">
@@ -177,8 +208,8 @@
     </p>
 
     <p>
-      The Foundation operates independently of the undergraduate chapter and is governed by a
-      volunteer <strong>Board of Directors</strong> composed of alumni who oversee all scholarships,
+      The Foundation operates alongside the undergraduate chapter and is governed by a joint 
+      <strong>Board of Directors</strong> composed of alumni volunteers and the undergraduate Honor Council who oversee all scholarships,
       grants, and leadership initiatives. All funds are used exclusively for educational and
       charitable purposes in accordance with our charter and IRS regulations.
     </p>
@@ -191,41 +222,10 @@
     <p style="margin-top:1.5rem;">
       For verification, you may look up our exemption record in the IRS Tax Exempt Organization Search database
       or request a copy of our determination letter by emailing
-      <a href="mailto:foundation@sigmanukapparho.org" style="color:#bbb;">foundation@sigmanukapparho.org</a>.
+      <a href="mailto:foundation@sigmanukapparho.org" style="color:#bbb;">alumni@sigmanukapparho.org</a>.
     </p>
   </div>
 </section>
-
-
-  <section id="donate" class="section-wrap">
-  <h2 class="section-title">Support the Legacy</h2>
-  <p class="section-sub">Choose a one-time gift or join the monthly <em>Legacy Circle</em>. Every contribution funds scholarships and leadership development for Kappa Rho undergraduates.</p>
-
-  <!-- One-time -->
-  <div style="text-align:center;">
-    <h3 style="color:#eee; margin-bottom:0.5rem;">One-Time Donation</h3>
-    <div class="action-row">
-      <a class="cta-btn" href="https://buy.stripe.com/once-50"   aria-label="Donate $50 one time">$50</a>
-      <a class="cta-btn" href="https://buy.stripe.com/once-100"  aria-label="Donate $100 one time">$100</a>
-      <a class="cta-btn" href="https://buy.stripe.com/once-250"  aria-label="Donate $250 one time">$250</a>
-      <a class="cta-btn" href="https://buy.stripe.com/once-custom" aria-label="Donate a custom amount one time">Custom Amount</a>
-    </div>
-  </div>
-
-  <hr class="hr-soft">
-
-  <!-- Monthly (recurring) -->
-  <div style="text-align:center;">
-    <h3 style="color:#eee; margin-bottom:0.5rem;">Monthly Giving — <em>Legacy Circle</em></h3>
-    <div class="action-row">
-      <a class="cta-btn" href="https://buy.stripe.com/month-10"  aria-label="Donate $10 monthly">$10/mo</a>
-      <a class="cta-btn" href="https://buy.stripe.com/month-25"  aria-label="Donate $25 monthly">$25/mo</a>
-      <a class="cta-btn" href="https://buy.stripe.com/month-50"  aria-label="Donate $50 monthly">$50/mo</a>
-      <a class="cta-btn" href="https://buy.stripe.com/month-custom" aria-label="Donate a custom amount monthly">Custom Monthly</a>
-    </div>
-  </div>
-</section>
-
 
 
   <footer style="background-color:#111; color:#888; font-size:0.9rem; text-align:center; padding:2rem 1rem; line-height:1.6;">
