--- a/legacy.html
+++ b/legacy.html
@@ -181,7 +181,7 @@
 
   <!-- Monthly (recurring) -->
   <div style="text-align:center;">
-    <h3 style="color:#eee; margin-bottom:0.5rem;">Monthly Giving — <em>Legacy Circle</em></h3>
+    <h3 style="color:#eee; margin-bottom:0.5rem;">Monthly Giving</h3>
     <div class="action-row">
       <a class="cta-btn" href="https://buy.stripe.com/aFa9AS9jm1r7c4Q9I3dAk05"  aria-label="Donate $10 monthly">$10/mo</a>
       <a class="cta-btn" href="https://buy.stripe.com/aFa3cu7begm11qc6vRdAk06"  aria-label="Donate $25 monthly">$25/mo</a>
