--- a/month-custom.html
+++ b/month-custom.html
@@ -4,29 +4,125 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Custom Monthly Donations | Kappa Rho Legacy Foundation</title>
+
+  <!-- Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display&family=Inter:wght@300;400;600&display=swap" rel="stylesheet" />
+
   <style>
     body {
       background-color: #000;
       color: #f5f5f5;
       font-family: 'Inter', sans-serif;
-      text-align: center;
-      padding: 10% 1rem;
       margin: 0;
+      text-align: center;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      height: 100vh;
+      overflow: hidden;
     }
-    a {
+
+    .glow-bg {
+      position: absolute;
+      width: 600px;
+      height: 600px;
+      background: radial-gradient(circle, rgba(255, 255, 255, 0.2), transparent 70%);
+      filter: blur(100px);
+      animation: glowPulse 3s ease-in-out infinite;
+      z-index: 1;
+    }
+
+    .content {
+      position: relative;
+      z-index: 2;
+      padding: 2rem;
+      max-width: 700px;
+    }
+
+    h1 {
+      font-family: 'DM Serif Display', serif;
+      font-size: 2.2rem;
+      margin-bottom: 1rem;
       color: #fff;
+      letter-spacing: 0.5px;
+      animation: fadeIn 1.2s ease-out forwards;
+    }
+
+    p {
+      color: #ccc;
+      line-height: 1.7;
+      font-size: 1.1rem;
+      margin-bottom: 2rem;
+      animation: fadeIn 1.5s ease-out forwards;
+      animation-delay: 0.3s;
+    }
+
+    a.email {
+      color: #fff;
+      text-decoration: none;
+      border: 1px solid #fff;
+      border-radius: 8px;
+      padding: 0.7rem 1.3rem;
+      display: inline-block;
+      margin-top: 0.5rem;
+      transition: background 0.2s ease, color 0.2s ease, transform 0.15s ease;
+    }
+
+    a.email:hover {
+      background: #fff;
+      color: #000;
+      transform: translateY(-2px);
+    }
+
+    a.back {
+      display: inline-block;
+      margin-top: 2rem;
+      color: #aaa;
       text-decoration: underline;
+      font-size: 0.95rem;
+    }
+
+    footer {
+      position: absolute;
+      bottom: 1rem;
+      width: 100%;
+      text-align: center;
+      color: #555;
+      font-size: 0.85rem;
+      font-weight: 300;
+    }
+
+    /* Animations */
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(20px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
+
+    @keyframes glowPulse {
+      0% { transform: scale(1); opacity: 0.4; }
+      50% { transform: scale(1.05); opacity: 0.6; }
+      100% { transform: scale(1); opacity: 0.4; }
     }
   </style>
 </head>
+
 <body>
-  <h1>Custom Monthly Donations</h1>
-  <p>
-    If you would like to donate a <strong>custom monthly amount</strong>,
-    please reach out to
-    <a href="mailto:alumni@sigmanukapparho.org">alumni@sigmanukapparho.org</a>
-    and we will arrange a custom payment together.
-  </p>
-  <p><a href="/legacy.html">← Return to the Foundation Page</a></p>
+  <div class="glow-bg"></div>
+  <div class="content">
+    <h1>Custom Monthly Donations</h1>
+    <p>
+      If you would like to donate a <strong>custom monthly amount</strong>,
+      please reach out to us directly. We’ll gladly arrange a personalized
+      recurring contribution that fits your giving preferences.
+    </p>
+    <a class="email" href="mailto:alumni@sigmanukapparho.org">Contact Us → alumni@sigmanukapparho.org</a>
+    <br>
+    <a class="back" href="/legacy.html">← Return to the Foundation Page</a>
+  </div>
+
+  <footer>
+    © 2025 Kappa Rho Legacy Foundation • EIN 39-2882713
+  </footer>
 </body>
 </html>
