--- a/legacy.html
+++ b/legacy.html
@@ -186,7 +186,7 @@
       <a class="cta-btn" href="https://buy.stripe.com/aFa9AS9jm1r7c4Q9I3dAk05"  aria-label="Donate $10 monthly">$10/mo</a>
       <a class="cta-btn" href="https://buy.stripe.com/aFa3cu7begm11qc6vRdAk06"  aria-label="Donate $25 monthly">$25/mo</a>
       <a class="cta-btn" href="https://buy.stripe.com/6oU5kC2UY4Dj1qcdYjdAk07"  aria-label="Donate $50 monthly">$50/mo</a>
-      <a class="cta-btn" href="https://sigmanukapparho.org/legacy.html" aria-label="Donate a custom amount monthly">Custom Monthly</a>
+      <a class="cta-btn" href="https://sigmanukapparho.org/custom-monthly.html" aria-label="Donate a custom amount monthly">Custom Monthly</a>
     </div>
   </div>
 </section>
